
### Solvers

- steadyGroundwaterFoam/groundwaterFoam

  - solvers have been merged. Steady simulations can be done using -steady
  option, i.e. :
       groundwaterFoam -steady
       
- steadyGroundwater2DFoam/groundwater2DFoam

  - solvers have been merge. Steady simulations can be done using -steady
  option, i.e. :
       groundwater2DFoam -steady

************************
*** PMFv2107.2
*** Minor fixes for PMFv2107.1
************************

### Bug fixes

- timeStepManager

  - there was issues for derivative computation when running on multiple cores.
  timeStepManager class now uses reduce function.

- sourceEventFile / 2D fixed points

  - parallel issues for source injection and potential fixed points.

************************
*** PMFv2107.2
*** Minor fixes for PMFv2107.1
************************

### Utilities

- subsetMeshFromDEM

  - Generate automatically a subsetMesh using two DEM files, respectively for
    the top and the bottom of the aquifer:

    subsetMeshFromDEM /patch/to/file/top.xyz /patch/to/file/bottom.xyz

    two patches are automatically generated: top and bottom.

- setFieldsFromXY

  - utility now generate a mapping file (.map) linking mesh cells to XY points.
  If .map file is present, utility check that number of cells corresponds to the
  mesh and that number of points corresponds to the interpolation. This allows
  the re-use of similar interpolation with reduced cost. Works both for serial
  and parallel runs.

### Bug

- groundwaterTransport2DFoam

  - fix dryCells (C=0 and dC/dt=0)

- darcyGradPressure

  - now handle dry cells (mobility=0) to avoid crash during steady iterations

- multiple minor bugs

************************
*** PMFv2107.1
*** Minor fixes for PMFv2107
************************

### Libraries

- numericalMethods

  - timestepManager: new class managing derivative computations (1s, 2nd
  and 3rd order) and timestepping based on truncation error.